GNOME Bugzilla – Bug 661372
Gconf aborts in D-Bus (makes dbus_message_unref(NULL) call)
Last modified: 2011-10-11 17:43:16 UTC
The bug originally exhibited in https://bugzilla.redhat.com/show_bug.cgi?id=737923 The report contains a patch to fix the issue.
diff --git a/gconf/gconf-dbus.c b/gconf/gconf-dbus.c index 335bc22..9b21293 100644 --- a/gconf/gconf-dbus.c +++ b/gconf/gconf-dbus.c @@ -1107,7 +1107,8 @@ gconf_engine_notify_remove (GConfEngine* conf, g_free (namespace_section); - dbus_message_unref (reply); + if (reply != NULL) + dbus_message_unref (reply); } GConfValue * There may be other places when the argument is not checked properly.
[Attaching patches as attachments is welcome, so they can be recognized when querying.]
Created attachment 198782 [details] [review] Don't crash when reply is NULL in gconf_engine_notify_remove()
Review of attachment 198782 [details] [review]: Integrated!
Thanks for your patch. Committed to master - should try and integrate in the next 3.2.1 release.