gconf-dbus: Don't crash when reply is NULL in gconf_engine_notify_remove()

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=661372